# Omni-Q

./: .gitignore  CMakeLists.txt  README.md  install.bat  rename.py
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DynamicEQProcessor.cpp  DynamicEQProcessor.h  FilterBand.h  FilterProcessor.cpp  FilterProcessor.h
Source/GUI/: ControlPanelComponent.cpp  ControlPanelComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  EQCurveComponent.cpp  EQCurveComponent.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
Source/Utilities/: Constants.h  ParameterLayout.cpp  ParameterLayout.h  PresetManager.cpp  PresetManager.h  SingleChannelSampleFifo.h
